--- a/requirements.txt
+++ b/requirements.txt
@@ -67,7 +67,7 @@ jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 kiwisolver==1.4.4
 lazy_loader==0.2
-librosa==0.10.0.post2
+librosa==-0.11.0
 llvmlite==0.39.1
 MarkupSafe==2.1.2
 matplotlib==3.7.1
@@ -119,7 +119,7 @@ requests==2.28.2
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 sacremoses==0.0.53
-scikit-learn==1.2.2
+scikit-learn==1.1.2
 scipy==1.10.1
 Send2Trash==1.8.0
 six==1.16.0
